--- a/src/main/resources/view/FindAllRoutesView.fxml
+++ b/src/main/resources/view/FindAllRoutesView.fxml
@@ -5,71 +5,65 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.FindAllRoutesCtrl">
    <top>
       <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <items>
-          <Button mnemonicParsing="false" text="Назад" />
+          <Button mnemonicParsing="false" onAction="#backToMonitoring" text="Назад" />
             <Button mnemonicParsing="false" text="Поїзд" />
-            <Button mnemonicParsing="false" text="блабла" />
         </items>
       </ToolBar>
    </top>
    <center>
-      <TableView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <TableView fx:id="trainsTable" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <columns>
-          <TableColumn prefWidth="75.0" text="C1" />
-          <TableColumn prefWidth="75.0" text="C2" />
+          <TableColumn fx:id="numtonum" prefWidth="75.0" text="Пересадка" />
+          <TableColumn fx:id="allTime" prefWidth="113.0" text="Час у дорозі" />
         </columns>
       </TableView>
    </center>
    <left>
-      <ScrollPane prefHeight="360.0" prefViewportHeight="450.0" prefViewportWidth="100.0" prefWidth="203.0">
-         <content>
-            <VBox prefHeight="356.0" prefWidth="203.0" BorderPane.alignment="CENTER">
-               <children>
-                  <TextField promptText="Звідки">
-                     <VBox.margin>
-                        <Insets bottom="10.0" />
-                     </VBox.margin>
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
-                  </TextField>
-                  <CheckBox mnemonicParsing="false" text="З пересадками">
-                     <VBox.margin>
-                        <Insets bottom="10.0" />
-                     </VBox.margin>
-                  </CheckBox>
-                  <TextField promptText="Через станцію">
-                     <VBox.margin>
-                        <Insets bottom="10.0" />
-                     </VBox.margin>
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
-                  </TextField>
-                  <TextField promptText="Куди">
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
-                     <VBox.margin>
-                        <Insets bottom="10.0" />
-                     </VBox.margin>
-                  </TextField>
-                  <DatePicker promptText="Дата відправлення">
-                     <VBox.margin>
-                        <Insets bottom="10.0" />
-                     </VBox.margin>
-                  </DatePicker>
-                  <Button mnemonicParsing="false" text="Пошук" />
-               </children>
+      <VBox BorderPane.alignment="CENTER">
+         <children>
+            <TextField fx:id="from" promptText="Звідки">
+               <VBox.margin>
+                  <Insets bottom="10.0" />
+               </VBox.margin>
                <padding>
-                  <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
-            </VBox>
-         </content>
-      </ScrollPane>
+            </TextField>
+            <CheckBox fx:id="isWithTransfers" mnemonicParsing="false" onAction="#toggleTransfers" text="З пересадками">
+               <VBox.margin>
+                  <Insets bottom="10.0" />
+               </VBox.margin>
+            </CheckBox>
+            <TextField fx:id="across" promptText="Через станцію">
+               <VBox.margin>
+                  <Insets bottom="10.0" />
+               </VBox.margin>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </TextField>
+            <TextField fx:id="to" promptText="Куди">
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+               <VBox.margin>
+                  <Insets bottom="10.0" />
+               </VBox.margin>
+            </TextField>
+            <DatePicker fx:id="date" promptText="Дата відправлення">
+               <VBox.margin>
+                  <Insets bottom="10.0" />
+               </VBox.margin>
+            </DatePicker>
+            <Button fx:id="searchWithTransfersBtn" mnemonicParsing="false" onAction="#searchWithTransfers" text="Пошук" />
+         </children>
+         <padding>
+            <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+         </padding>
+      </VBox>
    </left>
 </BorderPane>
