--- a/src/main/resources/view/MonitoringView.fxml
+++ b/src/main/resources/view/MonitoringView.fxml
@@ -18,6 +18,7 @@
         <items>
           <Button fx:id="startMonitoringBtn" mnemonicParsing="false" onAction="#startMonitoring" text="Розпочати" />
             <Button fx:id="changeTrainBtn" mnemonicParsing="false" onAction="#changeTrain" text="Потяг" />
+           <Button fx:id="gotosearchwithtransfersbtn" mnemonicParsing="false" onAction="#gotosearchwithtransfer" text="Потяг" />
         </items>
       </ToolBar>
    </top>
