--- a/src/main/resources/view/FindAllRoutesView.fxml
+++ b/src/main/resources/view/FindAllRoutesView.fxml
@@ -25,35 +25,26 @@
    <left>
       <VBox BorderPane.alignment="CENTER">
          <children>
-            <TextField fx:id="from" promptText="Звідки">
+            <ComboBox fx:id="from" editable="true" promptText="Звідки">
                <VBox.margin>
                   <Insets bottom="10.0" />
                </VBox.margin>
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-            </TextField>
-            <CheckBox fx:id="isWithTransfers" mnemonicParsing="false" onAction="#toggleTransfers" text="З пересадками">
+            </ComboBox>
+            <CheckBox fx:id="isWithTransfers" mnemonicParsing="false" text="З пересадками">
                <VBox.margin>
                   <Insets bottom="10.0" />
                </VBox.margin>
             </CheckBox>
-            <TextField fx:id="across" promptText="Через станцію">
+            <ComboBox fx:id="across" editable="true" promptText="Через" snapToPixel="false">
                <VBox.margin>
                   <Insets bottom="10.0" />
                </VBox.margin>
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-            </TextField>
-            <TextField fx:id="to" promptText="Куди">
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
+            </ComboBox>
+            <ComboBox fx:id="to" editable="true" promptText="Куди">
                <VBox.margin>
                   <Insets bottom="10.0" />
                </VBox.margin>
-            </TextField>
+            </ComboBox>
             <DatePicker fx:id="date" promptText="Дата відправлення">
                <VBox.margin>
                   <Insets bottom="10.0" />
