booking.uz.gov.ua doesn`t need token, so all what contains code with token has been commented

--- a/src/main/resources/view/styles.css
+++ b/src/main/resources/view/styles.css
@@ -5,3 +5,10 @@
     -fx-text-fill: #265c76;
     -fx-alignment: center;
 }
+.uz-text-small{
+    -fx-font-family: Verdana;
+    -fx-font-size: 12;
+    -fx-font-weight: bold;
+    -fx-text-fill: #265c76;
+    -fx-alignment: center;
+}
