--- a/src/main/resources/view/TrainDetailsView.fxml
+++ b/src/main/resources/view/TrainDetailsView.fxml
@@ -7,18 +7,19 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.TrainDetailsCtrl">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.TrainDetailsCtrl">
    <opaqueInsets>
       <Insets bottom="20.0" left="20.0" right="20.0" />
    </opaqueInsets>
    <left>
       <HBox alignment="CENTER" BorderPane.alignment="CENTER">
          <children>
-            <GridPane alignment="CENTER" hgap="15.0" vgap="20.0" BorderPane.alignment="CENTER">
+            <GridPane alignment="CENTER" hgap="15.0" prefHeight="380.0" prefWidth="607.0" vgap="20.0" BorderPane.alignment="CENTER">
               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="198.0" minWidth="154.0" prefWidth="176.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="201.0" minWidth="105.0" prefWidth="168.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="176.0" minWidth="112.0" prefWidth="176.0" />
                   <ColumnConstraints hgrow="SOMETIMES" />
-                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
-                <ColumnConstraints hgrow="SOMETIMES" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints vgrow="SOMETIMES" />
@@ -26,11 +27,6 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <ImageView fitHeight="33.0" fitWidth="49.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                     <image>
-                        <Image url="@../left_arrow.png" />
-                     </image>
-                  </ImageView>
                   <Label fx:id="trainFromNum" styleClass="uz-text" text="608К" GridPane.rowIndex="1">
                      <graphic>
                         <ImageView fitHeight="58.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
@@ -54,9 +50,19 @@
                         <Font size="10.0" />
                      </font>
                   </Label>
-                  <Label fx:id="tranitToName" styleClass="uz-text-small" text="Івано-Франківськ - Київ" GridPane.columnIndex="2" />
+                  <Label fx:id="trainToName" styleClass="uz-text-small" text="Івано-Франківськ - Київ" GridPane.columnIndex="2" />
                   <Label fx:id="trainFromDate" styleClass="uz-text-small" text="Label" GridPane.rowIndex="2" />
                   <Label fx:id="trainToDate" styleClass="uz-text-small" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <children>
+                        <ImageView fitHeight="49.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../left_arrow.png" />
+                           </image>
+                        </ImageView>
+                        <Label fx:id="transfer" styleClass="uz-text-small" text="Тернопіль" />
+                     </children>
+                  </VBox>
                </children>
             </GridPane>
          </children>
