--- a/src/main/resources/view/TrainDetailsView.fxml
+++ b/src/main/resources/view/TrainDetailsView.fxml
@@ -8,74 +8,85 @@
 <?import javafx.scene.layout.*?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.TrainDetailsCtrl">
-   <opaqueInsets>
-      <Insets bottom="20.0" left="20.0" right="20.0" />
-   </opaqueInsets>
-   <left>
-      <HBox alignment="CENTER" BorderPane.alignment="CENTER">
-         <children>
-            <GridPane alignment="CENTER" hgap="15.0" prefHeight="380.0" prefWidth="607.0" vgap="20.0" BorderPane.alignment="CENTER">
-              <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="198.0" minWidth="154.0" prefWidth="176.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="201.0" minWidth="105.0" prefWidth="168.0" />
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="176.0" minWidth="112.0" prefWidth="176.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <Label fx:id="trainFromNum" styleClass="uz-text" text="608К" GridPane.rowIndex="1">
-                     <graphic>
-                        <ImageView fitHeight="58.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../coach_ico.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Label>
-                  <Label fx:id="trainToNum" styleClass="uz-text" text="116Л" GridPane.columnIndex="2" GridPane.rowIndex="1">
-                     <graphic>
-                        <ImageView fitHeight="18.0" fitWidth="78.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../coach_ico.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Label>
-                  <Label fx:id="trainFromName" styleClass="uz-text-small" text="Чернівці - Львів">
-                     <font>
-                        <Font size="10.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="trainToName" styleClass="uz-text-small" text="Івано-Франківськ - Київ" GridPane.columnIndex="2" />
-                  <Label fx:id="trainFromDate" styleClass="uz-text-small" text="Label" GridPane.rowIndex="2" />
-                  <Label fx:id="trainToDate" styleClass="uz-text-small" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                     <children>
-                        <ImageView fitHeight="49.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../left_arrow.png" />
-                           </image>
-                        </ImageView>
-                        <Label fx:id="transfer" styleClass="uz-text-small" text="Тернопіль" />
-                     </children>
-                  </VBox>
-               </children>
-            </GridPane>
-         </children>
-         <padding>
-            <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
-         </padding>
-      </HBox>
-   </left>
-   <top>
-      <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-        <items>
-          <Button fx:id="backToFindAllRoutesBtn" mnemonicParsing="false" onAction="#backToFindAllRoutes" text="Назад" />
-        </items>
-      </ToolBar>
-   </top>
+    <opaqueInsets>
+        <Insets bottom="20.0" left="20.0" right="20.0" />
+    </opaqueInsets>
+    <left>
+        <HBox alignment="CENTER" BorderPane.alignment="CENTER">
+            <children>
+                <GridPane alignment="CENTER" hgap="15.0" prefHeight="380.0" prefWidth="607.0" vgap="20.0" BorderPane.alignment="CENTER">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="198.0" minWidth="154.0" prefWidth="176.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="201.0" minWidth="105.0" prefWidth="168.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="176.0" minWidth="112.0" prefWidth="176.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                    <children>
+                        <Label fx:id="trainFromNum" styleClass="uz-text" text="608К" GridPane.rowIndex="1">
+                            <graphic>
+                                <ImageView fitHeight="58.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../coach_ico.png" />
+                                    </image>
+                                </ImageView>
+                            </graphic>
+                        </Label>
+                        <Label fx:id="trainToNum" styleClass="uz-text" text="116Л" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                            <graphic>
+                                <ImageView fitHeight="18.0" fitWidth="78.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../coach_ico.png" />
+                                    </image>
+                                </ImageView>
+                            </graphic>
+                        </Label>
+                        <Label fx:id="trainFromName" styleClass="uz-text-small" text="Чернівці - Львів">
+                            <font>
+                                <Font size="10.0" />
+                            </font>
+                        </Label>
+                        <Label fx:id="trainToName" styleClass="uz-text-small" text="Івано-Франківськ - Київ" GridPane.columnIndex="2" />
+                        <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                            <children>
+                                <ImageView fitHeight="49.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../left_arrow.png" />
+                                    </image>
+                                </ImageView>
+                                <Label fx:id="transfer" styleClass="uz-text-small" text="Тернопіль" />
+                                <Label fx:id="transferTime" styleClass="uz-text-small" text="03 год. 20 хв." />
+                            </children>
+                        </VBox>
+                        <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="2">
+                            <children>
+                                <Label fx:id="trainFromDateDepartment" styleClass="uz-text-small" text="Label" />
+                                <Label fx:id="trainFromDateArrival" styleClass="uz-text-small" text="Label" />
+                            </children>
+                        </VBox>
+                        <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                            <children>
+                                <Label fx:id="trainToDateDepartment" styleClass="uz-text-small" text="Label" />
+                                <Label fx:id="trainToDateArrival" styleClass="uz-text-small" text="Label" />
+                            </children>
+                        </VBox>
+                    </children>
+                </GridPane>
+            </children>
+            <padding>
+                <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+            </padding>
+        </HBox>
+    </left>
+    <top>
+        <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <items>
+                <Button fx:id="backToFindAllRoutesBtn" mnemonicParsing="false" onAction="#backToFindAllRoutes" text="Назад" />
+            </items>
+        </ToolBar>
+    </top>
 </BorderPane>
